--- a/app.toml
+++ b/app.toml
@@ -5,10 +5,15 @@ host = "http://119.23.219.232:9933"
 chainId = 42
 startHeight = 95203
 
-[mysql]
-host=""
-user=""
-password=""
+[database]
+type= "mysql"
+mode= "release"
+name= ""
+url= ""
+user= ""
+password= ""
+
+
 
 [log]
 level = "info"
