--- a/app.toml
+++ b/app.toml
@@ -4,7 +4,7 @@ host = "http://119.23.219.232:9933"
 #chainId = 9090
 chainId = 42
 startHeight = 95203
-isReStartScan= true
+isReStartScan= false
 
 [database]
 type= "mysql"
