--- a/app.toml
+++ b/app.toml
@@ -7,7 +7,23 @@ chainId = 42
 startHeight = 95203
 isReStartScan= false
 
-[database]
+[database.local]
+type= "mysql"
+mode= "release"
+name= "eth_blockchain"
+url= "127.0.0.1:3306"
+user= "root"
+password= "123456"
+
+[database.test]
+type= "mysql"
+mode= "release"
+name= "eth_blockchain"
+url= "192.168.0.88:3306"
+user= "root"
+password= "jlw999000"
+
+[database.server]
 type= "mysql"
 mode= "release"
 name= "eth_blockchain"
