--- a/app.toml
+++ b/app.toml
@@ -1,11 +1,9 @@
 serverPort = 8080
-mode = "server"
-#host = "http://124.71.12.16:9933"
-host = "http://119.23.219.232:9933"
-#chainId = 9090
-chainId = 42
+mode = "local"
+host = "http://127.0.0.1:9933"
+chainId = 9090
 startHeight = 172420
-isReStartScan= false
+isReStartScan= true
 
 [database.local]
 type= "mysql"
@@ -14,22 +12,6 @@ name= "eth_blockchain"
 url= "127.0.0.1:3306"
 user= "root"
 password= "123456"
-
-[database.test]
-type= "mysql"
-mode= "release"
-name= "eth_blockchain"
-url= "69.231.190.96:3306"
-user= "root"
-password= "ZJ8z2aWKzlPY"
-
-[database.server]
-type= "mysql"
-mode= "release"
-name= "eth_blockchain"
-url= "52.83.177.130:3306"
-user= "root"
-password= "jlw999000"
 
 [log]
 level = "info"
